# Computational-Linguistics

./: .gitignore  .pre-commit-config.yaml  README.md
efficient-attention/: dataset.py  llm_train.py  memory_tracker.py  models.py  pyproject.toml  report_lab04.md  transformer_based_llm.py  utils.py
efficient-attention/outputs/: model_summary.txt
lab01-language-model/: README.md  custom_tokenizers.py  dataset.py  exceptions.py  llm_train.py  main.py  models.py  pyproject.toml  report.md  report_lab02.md  rnn_based_llm.py  rnn_inference.py  transformer_based_llm.py  transformer_inference.py  utils.py
lab01-language-model/notebooks/: explore_polish_slang_dataset.ipynb  test_bielik_classifier.ipynb
lab01-language-model/outputs/lab03/bielik/: model_summary.txt
lab01-language-model/outputs/rnn/: model_summary.txt
lab01-language-model/outputs/tokenizers/: oov_stats_whitespace.json
lab01-language-model/outputs/transformer/: model_summary.txt  transformer_inference_results.json
lab01-language-model/tokenizers/: custom_tokenizer_vocab.json  plwiki_unigram.model
language-modeling/: .gitignore  README.md  classifier_inference.py  classifier_train.py  dataset.py  llm_train.py  models.py  notes.txt  pyproject.toml  report_lab03.md  requirements.txt  rnn_inference.py  transformer_based_llm.py
language-modeling/outputs/lab03/gpt2/: model_summary.txt
language-modeling/outputs/rnn/: rnn_inference_results.json
language-modeling/outputs/tokenizers/: avg_tokens_per_word.json  tokenizer_comparison_on_samples.json  tokenizer_throughput_comparison.json  transformer_llamatokenizer_inference_results.json  transformer_sentencepiece_inference_results.json  transformer_whitespace_inference_results.json
llm-eval/: eval.py  logger.py  main.py  models.py  pyproject.toml  report_lab05.md  tasks.py
llm-eval/results/: code_generation_results.json  (+9 more)
reasoning/: .env.example  README.md  pyproject.toml  report_lab06.md
reasoning/results/llm_evaluation/: final_results.json  intermediate_claude_opus_4_5.json  intermediate_gemini_2_5_flash.json  intermediate_gpt_oss_120b.json
reasoning/results/trm_evaluation/: final_results.json
reasoning/src/reasoning_lab/: utils.py
reasoning/src/reasoning_lab/dataset/: sudoku_dataset.py
reasoning/src/reasoning_lab/llm/: config.py  llm_evaluator.py  metrics.py  models.py  prompts.py  run_llm_evaluation.py
reasoning/src/reasoning_lab/trm/: check_params.py  common.py  inference_trm.py  train_trm.py
