[project]
name = "lab01-language-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "ruff>=0.14.0",
    "speakleash>=0.3.51",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "transformers>=4.57.1",
]

[tool.ruff]
line-length = 140