[project]
name = "reasoning-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "notebook>=7.5.2",
    "tiny-recursive-model>=0.0.15",
    "pydantic>=2.0.0",
    "numpy>=1.20.0",
    "wandb>=0.15.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.60.0",
    "openai>=2.15.0",
    "langchain-core>=1.2.7",
    "pydantic-settings>=2.12.0",
    "google>=3.0.0",
    "google-genai>=1.60.0",
    "anthropic>=0.76.0",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "langchain-ollama>=1.0.1",
]



[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["reasoning_lab"]
exclude = ["tests*"]


[tool.ruff]
line-length = 140

[tool.ruff.lint]
# Config found on: https://www.reddit.com/r/Python/comments/15o73kq/what_ruff_config_do_you_use/
# Read more here https://beta.ruff.rs/docs/rules/
# By default, Ruff enables Flake8's E and F rules
# Pyflakes - F, pycodestyle - E, W
# flake8-builtins - A
# Pylint - PLC, PLE, PLW
# isort - I
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.14",
]
